# product_serving_practice

./: .gitignore  README.md  cloud.ipynb  invertible-fin-342411-f4c1d9d02228.json  pyproject.toml
fastapi_examples/: 01_simple_webserver.py  02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py  08_file.py  login_form.html
